# openshake

./: .ghci  .gitignore  Example.hs  Main.hs  openshake.cabal
Development/: Shake.hs
Development/Shake/: C.hs  Composition.hs  Core.hs  Files.hs  Oracles.hs  System.hs  Utilities.hs  WaitHandle.hs
Development/Shake/Core/: Binary.hs  Utilities.hs  WaitHandle.hs
Development/Shake/Oracles/: Common.hs  FileSystem.hs  String.hs
tests/: Test.lhs
tests/ambiguous-rules/: Shakefile.hs
tests/creates-directory-implicitly/: .gitignore  Shakefile.hs
tests/cyclic/: Shakefile.hs
tests/cyclic-harder/: Shakefile.hs
tests/deserialization-changes/: MyOracle.inc  Shakefile-1.hs  Shakefile-2.hs  Shakefile-3.hs  examplefile
tests/evan-hang/: Shakefile.hs
tests/evan-hang/App/: Main.hs
tests/evan-hang/Util/: Regex.hs
tests/lazy-exceptions/: Shakefile.hs
tests/lexical-scope/: .gitignore  Shakefile.hs
tests/lint/: .gitignore  Shakefile.hs  lint.stderr
tests/simple-c/: .gitignore  Main  Shakefile.hs  constants.h  main.c
tests/simple-hs/: Main  Main.hs  Shakefile.hs  Utility.hs
