Name:                openshake
Version:             0.1
Cabal-Version:       >= 1.2
Category:            Distribution
Synopsis:            Powerful and easy to use build system: open source implementation of Neil Mitchell's Shake system
Description:         A library for constructing build systems, using Haskell as a powerful domain specific language
                     for specifying rules.
                     
                     The best reference for how it works at the moment is Neil's presentation to the Haskell Implementors
                     Workshop 2010 at <http://community.haskell.org/~ndm/downloads/slides-shake_a_better_make-01_oct_2010.pdf>
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Max Bolingbroke <batterseapower@hotmail.com>
Homepage:            http://www.github.com/batterseapower/openshake
Build-Type:          Simple

Library
        Exposed-Modules:        Development.Shake
                                Development.Shake.C
                                Development.Shake.Composition
                                Development.Shake.Core.Binary
                                Development.Shake.Core.Utilities
                                Development.Shake.Core.WaitHandle
                                Development.Shake.Core
                                Development.Shake.Files
                                Development.Shake.Oracles.Common
                                Development.Shake.Oracles.FileSystem
                                Development.Shake.Oracles.String
                                Development.Shake.Oracles
                                Development.Shake.System
        
        Build-Depends:          base >= 3 && < 5, containers >= 0.3, directory >= 1.0.1.1,
                                filepath >= 1.1, old-time >= 1.0, time >= 1.4, process >= 1.0.1,
                                Glob >= 0.5.1, transformers >= 0.2.2,
                                bytestring >= 0.9.1, binary >= 0.5, utf8-string >= 0.3.6,
                                parallel-io >= 0.2.1.1, temporary >= 1.1,
                                deepseq >= 1.1, monad-peel >= 0.1, access-time >= 0.1,
                                split >= 0.1.1

        if os(windows)
            Cpp-Options:        -DWINDOWS
